samples/_failures_safe/1761316277_f56b5d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bce38def.c: In function ‘main’:
./samples/SAFE/__tmp_bce38def.c:176:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  176 |     size_t len
      |     ^~~~~~
./samples/SAFE/__tmp_bce38def.c:176:5: error: expected declaration or statement at end of input
